--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^7.1.1",
     "eslint": "^3.15.0",
     "mocha": "^3.2.0",
     "sinon": "^1.17.7",
